index.css
@font-face {
  font-family: font1;
  src: url(Fonts/PPMigra-Regular.fb0ee287.ttf);
}

@font-face {
  font-family: font2;
  src: url(Fonts/SharpGrotesk-Bold.164b198a.ttf);
}

@font-face {
  font-family: font3;
  src: url(Fonts/TTCommons-Regular.7ec989a7.ttf);
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  user-select: none !important;
}

html,
body {
  width: 100%;
  height: 100%;
  background-color: rgb(231, 228, 229, 1);
}

nav {
  width: 100%;
  height: 10vh;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  background-color: transparent;
  background-color: rgb(231, 228, 229, 1);
}

.nav-logo {
  width: 50%;
  height: 100%;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
}

#nav-svg {
  fill: black;
}

.nav-menus {
  position: relative;
  overflow: hidden;
  width: 25%;
  height: 100%;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
}

.nav-work {
  width: 25%;
  height: 100%;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
}

.nav-menu {
  position: absolute;
  top: 50%;
  transform: translate(0%, -50%);
  opacity: 1;
}

.nav-close {
  position: absolute;
  top: 100%;
  transform: translate(0%, -100%);
  opacity: 0;
}

.nav-menu,
.nav-close,
.nav-work {
  color: #030304;
  font-family: font3;
  font-weight: 400;
  cursor: pointer;
}

.nav-offcanvas {
  width: 100%;
  height: 90vh;
  position: absolute;
  top: -100%;
  bottom: 0;
  right: 0;
  left: 0;
  background-color: #bcbeb3;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  z-index: 999999;
}

.nav-offcanvas-links {
  position: relative;
  overflow: hidden;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.nav-offcanvas-link {
  transition: all 0.3s linear;
  position: relative;
  text-decoration: none;
  color: #030304;
  font-family: font1;
  font-size: 100px;
  font-weight: 900;
  cursor: pointer;
}

.nav-offcanvas-link:hover {
  transition: all 0.3s linear;
  font-family: font2;
  transform: scale(1.1);
  animation: NavOffcanvasLinks 1s ease-in-out;
  color: white;
}

/* .nav-offcanvas-link:hover{
  transition: all 0.3s linear;
  transform: rotateY(180deg);
  opacity: 0;
} */

/* .nav-offcanvas-link:before {
  transition: all 0.3s linear;
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  color: #ffff;
  font-family: font2;
  transform: rotateY(180deg);
  scale: 0.1;
  opacity: 0;
} */

/* .nav-offcanvas-link:hover {
  transform: rotateY(180deg);
  scale:1;
}
 */

/* .nav-offcanvas-link:hover::before {
  transition: all 0.3s linear;
  transform: rotateY(0deg);
  scale: 1;
  opacity: 1;
}

.nav-offcanvas-link:nth-child(1)::before {
  content: "HOME";
}

.nav-offcanvas-link:nth-child(2)::before {
  content: "ABOUTUS";
}

.nav-offcanvas-link:nth-child(3)::before {
  content: "NEWS";
}

.nav-offcanvas-link:nth-child(4)::before {
  content: "VENTURES";
}

.nav-offcanvas-link:nth-child(5)::before {
  content: "CONTACT";
} */

.nav-offcanvas-platform {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  gap: 25px 25px;
}

.nav-offcanvas-platform > h4 {
  position: relative;
  overflow: hidden;
  color: #030304;
  font-family: font3;
  font-weight: 400;
  cursor: pointer;
}

.nav-offcanvas-platform > h4::before {
  transition: all 0.3s linear;
  content: "";
  position: absolute;
  bottom: 0;
  left: -100%;
  width: 100%;
  height: 1px;
  background-color: black;
}
.nav-offcanvas-platform > h4:hover::before {
  transition: all 0.5s linear;
  left: 100%;
  animation: navOffcanvasAnimation 1s linear;
}

.main-page {
  width: 100%;
  height: 90vh;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
}

.main-heading {
  width: 100%;
  height: fit-content;
  text-align: center;
}

.div {
  width: 200px;
  height: 300px;
  position: absolute;
  overflow: hidden;
}

.div img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  transform: translateY(100%);
}

.main-heading > h1 {
  color: #030304;
  font-weight: 400;
  font-size: 120px;
  font-weight: 900;
  cursor: pointer;
  text-transform: uppercase;
}

.main-heading > h1:nth-child(1),
h1:nth-child(2) {
  font-family: font1;
}

.main-heading > h1:nth-child(3) {
  font-family: font2;
}

@media (max-width: 1000px) {
  .nav-offcanvas-link {
    font-size: 80px;
  }
}

@media (max-width: 800px) {
  .nav-offcanvas-links {
    gap: 20px;
  }

  .nav-offcanvas-link {
    font-size: 70px;
  }

  .nav-offcanvas-platform {
    gap: 20px 20px;
  }

  .main-heading {
    width: 100%;
    padding: 0 10px;
  }

  .main-heading > h1 {
    font-size: 100px;
  }

  .main-heading > h1:nth-child(1),
  h1:nth-child(2) {
    font-family: font1;
  }
}

@media (max-width: 600px) {
  .nav-offcanvas-links {
    gap: 20px;
  }

  .nav-offcanvas-link {
    font-size: 50px;
  }

  .nav-offcanvas-platform {
    gap: 20px 20px;
  }

  .nav-offcanvas-platform > h4 {
    font-size: 14px;
  }

  .main-heading > h1 {
    font-size: 80px;
  }
}

@media (max-width: 500px) {
  .main-heading {
    gap: 20px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  .main-heading > h1 {
    font-size: 60px;
  }
}

@media (max-width: 400px) {
  #nav-svg {
    fill: black;
    scale: 0.8;
  }

  .nav-menu,
  .nav-close,
  .nav-work {
    font-size: 13px;
  }

  .main-heading > h1 {
    font-size: 50px;
  }
}

